Project 1 : Cleaning Up

--- a/Project1/Whiplash.html
+++ b/Project1/Whiplash.html
@@ -39,24 +39,4 @@
 <div class='day-box' style='top: 260px;'>Wednesday</div>
 <div class='day-box' style='top: 310px;'>Thursday</div>
 <div class='day-box' style='top: 360px;'>Friday</div>
-
-<div class='record-box' style='width: 300px; left: 100px; top:360px; '>Eram</div>
-<div class='record-box' style='width: 300px; left: 800px; top:360px; '>Arash</div>
-<div class='record-box' style='width: 300px; left: 1300px; top:360px; '>Azadi</div>
-<div class='record-box' style='width: 300px; left: 500px; top:160px; '>Javan</div>
-<div class='record-box' style='width: 300px; left: 1000px; top:160px; '>Javan</div>
-<div class='record-box' style='width: 300px; left: 1350px; top:160px; '>Arash</div>
-<div class='record-box' style='width: 300px; left: 100px; top:60px; '>Ghods</div>
-<div class='record-box' style='width: 300px; left: 1250px; top:60px; '>Mellat</div>
-<div class='record-box' style='width: 300px; left: 100px; top:110px; '>Felestin</div>
-<div class='record-box' style='width: 300px; left: 600px; top:110px; '>Iran</div>
-<div class='record-box' style='width: 300px; left: 450px; top:310px; '>Esteghlal</div>
-<div class='record-box' style='width: 300px; left: 900px; top:310px; '>Arg</div>
-<div class='record-box' style='width: 300px; left: 1200px; top:310px; '>Iran</div>
-<div class='record-box' style='width: 300px; left: 700px; top:210px; '>Mellat</div>
-<div class='record-box' style='width: 300px; left: 1050px; top:210px; '>Ghods</div>
-<div class='record-box' style='width: 300px; left: 400px; top:260px; '>Hafez</div>
-<div class='record-box' style='width: 300px; left: 850px; top:260px; '>Farhang</div>
-
-</body>
-</html>
+<div class='record-box' style='width: 300px; left: 100; top:60; '>Ghods</div><div class='record-box' style='width: 300px; left: 1250; top:60; '>Mellat</div><div class='record-box' style='width: 300px; left: 100; top:110; '>Felestin</div><div class='record-box' style='width: 300px; left: 600; top:110; '>Iran</div><div class='record-box' style='width: 300px; left: 500; top:160; '>Javan</div><div class='record-box' style='width: 300px; left: 1000; top:160; '>Javan</div><div class='record-box' style='width: 300px; left: 1350; top:160; '>Arash</div><div class='record-box' style='width: 300px; left: 700; top:210; '>Mellat</div><div class='record-box' style='width: 300px; left: 1050; top:210; '>Ghods</div><div class='record-box' style='width: 300px; left: 400; top:260; '>Hafez</div><div class='record-box' style='width: 300px; left: 850; top:260; '>Farhang</div><div class='record-box' style='width: 300px; left: 450; top:310; '>Esteghlal</div><div class='record-box' style='width: 300px; left: 900; top:310; '>Arg</div><div class='record-box' style='width: 300px; left: 1200; top:310; '>Iran</div><div class='record-box' style='width: 300px; left: 100; top:360; '>Eram</div><div class='record-box' style='width: 300px; left: 800; top:360; '>Arash</div><div class='record-box' style='width: 300px; left: 1300; top:360; '>Azadi</div></body></html>
