--- a/Utunes-Final-Project-Phase3/public/index.html
+++ b/Utunes-Final-Project-Phase3/public/index.html
@@ -17,6 +17,11 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <% if(context["error"] != "") { %>
+    <script>
+      alert("<% cout << context["error"]; %>");
+    </script>
+    <% } %>
   </head>
   <body>
     
